--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "load-db": "node reloadDatabase.mjs",
     "startDirect": "json-server --watch --config json-server.json ./database.json",
-    "start": "node --watch apiServer.mjs"
+    "start": "node apiServer.mjs"
   },
   "author": "@RapPayne",
   "license": "UNLICENSED",
